# HaskellProject

./: Board.hs  Chess.hs  Dockerfile  Main.hs  README.rst  Validate.hs  chess.cabal  tests.txt
