name:                chess
version:             1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable chess
  main-is:             Chess.hs
  other-modules:       Board
                     , Validate
  build-depends:       base >=4.9 && <5
                     , split
                     , ansi-terminal
  default-language:    Haskell2010
  ghc-options:         -main-is Chess